--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,13 +8,13 @@
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
-      "type": "image/png",
+      "src": "/images/logo192.svg",
+      "type": "image/svg",
       "sizes": "192x192"
     },
     {
-      "src": "logo512.png",
-      "type": "image/png",
+      "src": "/images/logo512.svg",
+      "type": "image/svg",
       "sizes": "512x512"
     }
   ],
