--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.1",
+    "axios": "^0.27.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hot-toast": "^2.2.0",
+    "react-redux": "^8.0.1",
     "react-router-dom": "^5.3.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
