--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.1",
     "axios": "^0.27.2",
+    "email-validator": "^2.0.4",
+    "phone": "^3.1.28",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hot-toast": "^2.2.0",
     "react-redux": "^8.0.1",
     "react-router-dom": "^5.3.1",
     "react-scripts": "5.0.1",
+    "socket.io-client": "^4.5.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
