--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,3 @@
-REACT_APP_API_URL=[Your API BASE_URL]
+/* CHANGE THESE AS YOU WANT */
+REACT_APP_API_BASE_URL=[http://localhost:8000]
+REACT_APP_API_URL=[http://localhost:8000/api]
